Adjusted button spacing and size to resolve #147.

--- a/assets/scss/_utilities.scss
+++ b/assets/scss/_utilities.scss
@@ -557,17 +557,17 @@
 
 %bttn {
   border: none;
-  display: inline-block;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
   position: relative;
   cursor: pointer;
   text-align: center;
   text-decoration: none;
   text-transform: uppercase;
-  //font-size: $base-font-size;
-  //font-weight: $font-weight-bold;
   line-height: 1.4;
-  font-size: 1.2rem;
-  padding: 1rem 2rem .8rem;
+  font-size: 1.25rem;
+  padding: 1rem 2rem 1rem;
 
   i,
   svg {
@@ -630,7 +630,7 @@
 }
 
 %bttn--full {
-  display: block;
+  display: flex;
 }
 
 %bttn--outline {
